# vlrag

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  _build_ai_shopping_plan_doc.py  _build_ai_shopping_plan_doc_v2.py  pyproject.toml  run_pipeline.py
src/: assistant_graph.py  cli.py  cli_cnclip_index.py  cli_polyvore_outfit.py  cli_polyvore_recommend.py  config.py  outfit_advice_service.py  outfit_analyze_service.py  outfit_revise_advice_service.py  outfit_revise_candidate_service.py  outfit_revise_graph_service.py  outfit_revise_service.py  performance.py  polyvore_recommend.py  polyvore_recommend_service.py  polyvore_retrieval.py
tests/: test_agent_memory.py  test_agent_policy.py  test_api_warmup.py  test_assistant_graph.py  test_chinese_clip.py  test_cli_polyvore_recommend.py  test_cli_tools_layout.py  test_codex_global_config.py  test_custom_agents.py  test_dashscope_client_config.py  test_embeddings.py  test_llm.py  test_minio_client.py  test_neo4j_outfit_provider.py  test_outfit_advice_service.py  test_outfit_analyze_service.py  test_outfit_revise_advice_integration.py  test_outfit_revise_advice_service.py  test_outfit_revise_candidate_service.py  test_outfit_revise_graph_integration.py  test_outfit_revise_graph_service.py  test_outfit_revise_service.py  test_performance_observability.py  test_polyvore_api.py  test_polyvore_dual_retrieval.py  test_polyvore_item_resolver.py  test_polyvore_neo4j_chroma_index.py  test_polyvore_neo4j_import.py  test_polyvore_neo4j_manifest.py  test_polyvore_outfit_graph.py  test_polyvore_preview.py  test_polyvore_recommend.py  (+6 more)
(+67 files in other folders)
