[project]
name = "shopping-qna"
version = "0.2.0"
description = "多模态 RAG 购物助手 - 百炼平台版"
requires-python = ">=3.11"

dependencies = [
    # 百炼平台
    "dashscope>=1.20.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-chroma>=0.1.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.3.0",
    "langgraph>=1.2,<2",

    # 数据处理 & 图片
    "datasets>=2.0.0",
    "Pillow>=10.0.0",
    "minio>=7.2.0",
    "torch>=2.0.0",
    "transformers==4.50.3",

    # 工具
    "python-dotenv>=1.0.0",
    "pandas>=2.0.0",
    "tenacity>=8.0.0",
    "httpx>=0.27.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
graph = ["neo4j>=5.0.0"]
ui = ["streamlit>=1.30.0"]
dev = ["pytest>=8.0.0", "ruff>=0.3.0"]
